@@ -92,7 +92,10 @@ int libcthreads_thread_attributes_initialize(
 		 "%s: unable to clear thread attributes.",
 		 function );
 
-		goto on_error;
+		memory_free(
+		 internal_thread_attributes );
+
+		return( -1 );
 	}
 /* TODO */
 	*thread_attributes = (libcthreads_thread_attributes_t *) internal_thread_attributes;
