@@ -172,6 +172,13 @@ int cthreads_test_thread_create(
 	if( cthreads_test_malloc_attempts_before_fail != -1 )
 	{
 		cthreads_test_malloc_attempts_before_fail = -1;
+
+		if( thread != NULL )
+		{
+			libcthreads_thread_join(
+			 &thread,
+			 NULL );
+		}
 	}
 	else
 	{
@@ -205,6 +212,13 @@ int cthreads_test_thread_create(
 	if( cthreads_test_memset_attempts_before_fail != -1 )
 	{
 		cthreads_test_memset_attempts_before_fail = -1;
+
+		if( thread != NULL )
+		{
+			libcthreads_thread_join(
+			 &thread,
+			 NULL );
+		}
 	}
 	else
 	{
