@@ -16,6 +16,8 @@ Tests
 * clean up stdout/stderr
 * add tests of libcthreads_queue_push_sorted
 * add tests of libcthreads_queue_push_sorted
+* add tests for libcthreads_thread_attributes
+* add tests for libcthreads_repeating_thread
 
 20160426
 * worked on tests
